<resources>
    <string name="app_name">Nmedia</string>
    <string name="hello">Hello word!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="like_icon_desc">Like</string>
    <string name="repost_icon_desc">Share</string>
    <string name="views_icon_desc">Views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="description_post_like">description_post_like</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="no_app_for_video">There is no app to open the video</string>

    <string name="error_loading">Error loading</string>
    <string name="retry">Retry</string>
    <string name="empty_posts">No posts yet</string>
    <string name="description_attachment_image">Attachment image</string>
    <string name="description_post_status">The status of sending the post</string>


</resources>