<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/netology"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="Author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        android:text="Published" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        android:text="Post content goes here" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />


    <!-- Лайки -->
    <ImageView
        android:id="@+id/like_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/like_icon_desc"
        android:src="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        />

    <TextView
        android:id="@+id/like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/like_icon"
        app:layout_constraintStart_toEndOf="@id/like_icon"
        app:layout_constraintTop_toTopOf="@id/like_icon" />

    <!-- Репосты -->
    <ImageView
        android:id="@+id/repost_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/repost_icon_desc"
        android:src="@drawable/share"
        app:layout_constraintStart_toEndOf="@+id/like_count"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:tint="#000000" />

    <TextView
        android:id="@+id/repost_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/repost_icon"
        app:layout_constraintStart_toEndOf="@id/repost_icon"
        app:layout_constraintTop_toTopOf="@id/repost_icon" />

    <!-- Просмотры -->
    <ImageView
        android:id="@+id/views_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/views_icon_desc"
        android:src="@drawable/visibility"
        app:layout_constraintEnd_toStartOf="@id/views_count"
        app:layout_constraintTop_toBottomOf="@id/barrier2"
        app:tint="#000000" />

    <TextView
        android:id="@+id/views_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:minWidth="32dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/views_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/views_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>